test/valid_codesnipsets/call_in_if.go
package main

import "fmt"

func main() {
    if true {
        foo()
    }
}

func foo() {

}