test/type_errors/return_without_expr.go
package main

import "fmt"

func main(){
    
}

func returnme() int {
    return
}